# Production-RAG-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yaml
backend/: app.py  local_llm.py  local_llm_HF.py  requirements-dev.txt
backend/chroma/: chroma.sqlite3
backend/rag/: schemas.py
backend/routes/: __init__.py  upload.py
backend/tests/: README.md  conftest.py  running_all_tests.md  test_app.py  test_integration.py  test_monitoring.py  test_performance.py  test_pipelines.py  test_rag_components.py  test_security.py
chroma/: chroma.sqlite3
chroma/5ee8dcbd-88a2-49f7-8570-eff85d0af59d/: index_metadata.pickle
deploy/: nginx.conf  nginx.docker.conf
documents/27fa86a1-9f07-4f32-af65-9f6c8eb50525/: meta.json  original.txt
documents/58791c55-09fd-4af7-a9c6-12dfa9c63b39/: original.docx
documents/82ee94af-2f15-4d1c-916f-9f86c4353e0a/: meta.json  original.csv
documents/b7ee336d-561c-46ff-b0d2-76018ae7babd/: original.txt
documents/dcc60e31-901e-4833-9c0d-8420e211af74/: meta.json
test_docs/: ml.txt  people.csv  test.txt
tests/: conftest.py  test_app.py  test_schemas.py  test_upload.py
web/: demo.html  index.html  script.js  style.css
